--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -41,6 +41,7 @@
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
   "docspace.error.payment": "Creating this room is not possible since the limit is reached for the number of rooms included in your current plan.",
   "docspace.link.payments": "Upgrade plan",
+  "docspace.room.type.form-filling-room": "Form filling room",
   "docspace.room.type.collaboration": "Collaboration room",
   "docspace.room.type.public": "Public room",
   "docspace.room.type.vdr": "Virtual Data room",
