--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -41,6 +41,7 @@
   "docspace.error.loading": "Errore durante il caricamento di ONLYOFFICE DocSpace",
   "docspace.error.payment": "Non è possibile creare la stanza. È stato raggiunto il limite del numero di stanze incluse nel tuo piano attuale.",
   "docspace.link.payments": "Esegui l'upgrade del tuo piano",
+  "docspace.room.type.form-filling-room": "",
   "docspace.room.type.collaboration": "Stanza di collaborazione",
   "docspace.room.type.public": "Stanza pubblica",
   "docspace.room.type.vdr": "Stanza di dati virtuale",
