--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -41,6 +41,7 @@
   "docspace.error.loading": "Erro ao carregar o ONLYOFFICE DocSpace",
   "docspace.error.payment": "Não é possível criar esta sala, pois o limite foi atingido para o número de salas incluídas no seu plano atual.",
   "docspace.link.payments": "Plano de upgrade",
+  "docspace.room.type.form-filling-room": "",
   "docspace.room.type.collaboration": "Sala de colaboração",
   "docspace.room.type.public": "Sala pública",
   "docspace.room.type.vdr": "Sala de dados virtual",
