--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -41,6 +41,7 @@
   "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
   "docspace.error.payment": "Комната не может быть создана, поскольку достигнут лимит на количество комнат, включенных в ваш текущий тарифный план.",
   "docspace.link.payments": "Обновить тарифный план",
+  "docspace.room.type.form-filling-room": "",
   "docspace.room.type.collaboration": "Комната для совместной работы",
   "docspace.room.type.public": "Публичная комната",
   "docspace.room.type.vdr": "Виртуальная комната данных",
