feat: added create room confirmation dialog

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Öffentlicher Raum",
   "docspace.room.type.vdr": "Virtueller Datenraum",
   "docspace.room.type.custom": "Benutzerdefinierter Raum",
+  "docspace.room.type.form-filling-room.description": "",
+  "docspace.room.type.collaboration.description": "",
+  "docspace.room.type.public.description": "",
+  "docspace.room.type.vdr.description": "",
+  "docspace.room.type.custom.description": "",
   "error.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
