--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Public room",
   "docspace.room.type.vdr": "Virtual Data room",
   "docspace.room.type.custom": "Custom room",
+  "docspace.room.type.form-filling-room.description": "",
+  "docspace.room.type.collaboration.description": "",
+  "docspace.room.type.public.description": "",
+  "docspace.room.type.vdr.description": "",
+  "docspace.room.type.custom.description": "",
   "error.common": "Something went wrong. Please reload the app.",
   "error.empty-field": "Please fill out this field",
   "error.incorrect-docspace-address": "Incorrect DocSpace address, please try again",
