--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Sala pública",
   "docspace.room.type.vdr": "Sala de datos virtuales",
   "docspace.room.type.custom": "Sala personalizada",
+  "docspace.room.type.form-filling-room.description": "",
+  "docspace.room.type.collaboration.description": "",
+  "docspace.room.type.public.description": "",
+  "docspace.room.type.vdr.description": "",
+  "docspace.room.type.custom.description": "",
   "error.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
