--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Stanza pubblica",
   "docspace.room.type.vdr": "Stanza di dati virtuale",
   "docspace.room.type.custom": "Stanza personalizzata",
+  "docspace.room.type.form-filling-room.description": "",
+  "docspace.room.type.collaboration.description": "",
+  "docspace.room.type.public.description": "",
+  "docspace.room.type.vdr.description": "",
+  "docspace.room.type.custom.description": "",
   "error.common": "Qualcosa è andato storto. Ricarica l'app.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
