--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "パブリックルーム",
   "docspace.room.type.vdr": "バーチャルデータルーム",
   "docspace.room.type.custom": "カスタムルーム",
+  "docspace.room.type.form-filling-room.description": "",
+  "docspace.room.type.collaboration.description": "",
+  "docspace.room.type.public.description": "",
+  "docspace.room.type.vdr.description": "",
+  "docspace.room.type.custom.description": "",
   "error.common": "何か問題が発生しました。アプリを再読み込みしてください。",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
