--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Публичная комната",
   "docspace.room.type.vdr": "Виртуальная комната данных",
   "docspace.room.type.custom": "Пользовательская комната",
+  "docspace.room.type.form-filling-room.description": "",
+  "docspace.room.type.collaboration.description": "",
+  "docspace.room.type.public.description": "",
+  "docspace.room.type.vdr.description": "",
+  "docspace.room.type.custom.description": "",
   "error.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
