--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Sala pública",
   "docspace.room.type.vdr": "Sala de dados virtual",
   "docspace.room.type.custom": "Sala personalizada",
+  "docspace.room.type.form-filling-room.description": "",
+  "docspace.room.type.collaboration.description": "",
+  "docspace.room.type.public.description": "",
+  "docspace.room.type.vdr.description": "",
+  "docspace.room.type.custom.description": "",
   "error.common": "Algo deu errado. Recarregue o aplicativo.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
