--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Salle publique",
   "docspace.room.type.vdr": "Salle de données virtuelle",
   "docspace.room.type.custom": "Salle personnalisée",
+  "docspace.room.type.form-filling-room.short-description": "",
+  "docspace.room.type.collaboration.short-description": "",
+  "docspace.room.type.public.short-description": "",
+  "docspace.room.type.vdr.short-description": "",
+  "docspace.room.type.custom.short-description": "",
   "docspace.room.type.form-filling-room.description": "",
   "docspace.room.type.collaboration.description": "",
   "docspace.room.type.public.description": "",
