--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Öffentlicher Raum",
   "docspace.room.type.vdr": "Virtueller Datenraum",
   "docspace.room.type.custom": "Benutzerdefinierter Raum",
+  "docspace.room.type.form-filling-room.short-description": "",
+  "docspace.room.type.collaboration.short-description": "",
+  "docspace.room.type.public.short-description": "",
+  "docspace.room.type.vdr.short-description": "",
+  "docspace.room.type.custom.short-description": "",
   "docspace.room.type.form-filling-room.description": "",
   "docspace.room.type.collaboration.description": "",
   "docspace.room.type.public.description": "",
