--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Public room",
   "docspace.room.type.vdr": "Virtual Data room",
   "docspace.room.type.custom": "Custom room",
+  "docspace.room.type.form-filling-room.short-description": "To collect data in PDF forms",
+  "docspace.room.type.collaboration.short-description": "To co-edit documents with your team",
+  "docspace.room.type.public.short-description": "To share files with external users and clients",
+  "docspace.room.type.vdr.short-description": "To provide advanced file protection",
+  "docspace.room.type.custom.short-description": "To work according to your goals",
   "docspace.room.type.form-filling-room.description": "",
   "docspace.room.type.collaboration.description": "",
   "docspace.room.type.public.description": "",
