--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -46,6 +46,11 @@
   "docspace.room.type.public": "Публичная комната",
   "docspace.room.type.vdr": "Виртуальная комната данных",
   "docspace.room.type.custom": "Пользовательская комната",
+  "docspace.room.type.form-filling-room.short-description": "",
+  "docspace.room.type.collaboration.short-description": "",
+  "docspace.room.type.public.short-description": "",
+  "docspace.room.type.vdr.short-description": "",
+  "docspace.room.type.custom.short-description": "",
   "docspace.room.type.form-filling-room.description": "",
   "docspace.room.type.collaboration.description": "",
   "docspace.room.type.public.description": "",
