--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -51,11 +51,11 @@
   "docspace.room.type.public.short-description": "To share files with external users and clients",
   "docspace.room.type.vdr.short-description": "To provide advanced file protection",
   "docspace.room.type.custom.short-description": "To work according to your goals",
-  "docspace.room.type.form-filling-room.description": "",
-  "docspace.room.type.collaboration.description": "",
-  "docspace.room.type.public.description": "",
-  "docspace.room.type.vdr.description": "",
-  "docspace.room.type.custom.description": "",
+  "docspace.room.type.form-filling-room.description": "To collect data through filling out PDF forms.",
+  "docspace.room.type.collaboration.description": "To collaborate on documents, spreadsheets, and presentations in real time.",
+  "docspace.room.type.public.description": "To share documents with external users without requiring registration.",
+  "docspace.room.type.vdr.description": "To securely store and exchange confidential information, such as during due diligence.",
+  "docspace.room.type.custom.description": "To make use of flexible access and role configuration for various use cases.",
   "error.common": "Something went wrong. Please reload the app.",
   "error.empty-field": "Please fill out this field",
   "error.incorrect-docspace-address": "Incorrect DocSpace address, please try again",
