--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -44,7 +44,7 @@
   "docspace.room.type.form-filling-room": "",
   "docspace.room.type.collaboration": "Sala de colaboração",
   "docspace.room.type.public": "Sala pública",
-  "docspace.room.type.vdr": "Sala de dados virtual",
+  "docspace.room.type.vdr": "",
   "docspace.room.type.custom": "Sala personalizada",
   "docspace.room.type.form-filling-room.short-description": "",
   "docspace.room.type.collaboration.short-description": "",
