--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -44,7 +44,7 @@
   "docspace.room.type.form-filling-room": "Form filling room",
   "docspace.room.type.collaboration": "Collaboration room",
   "docspace.room.type.public": "Public room",
-  "docspace.room.type.vdr": "Virtual Data room",
+  "docspace.room.type.vdr": "Virtual Data room (VRD)",
   "docspace.room.type.custom": "Custom room",
   "docspace.room.type.form-filling-room.short-description": "To collect data in PDF forms",
   "docspace.room.type.collaboration.short-description": "To co-edit documents with your team",
