--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -44,7 +44,7 @@
   "docspace.room.type.form-filling-room": "",
   "docspace.room.type.collaboration": "Stanza di collaborazione",
   "docspace.room.type.public": "Stanza pubblica",
-  "docspace.room.type.vdr": "Stanza di dati virtuale",
+  "docspace.room.type.vdr": "",
   "docspace.room.type.custom": "Stanza personalizzata",
   "docspace.room.type.form-filling-room.short-description": "",
   "docspace.room.type.collaboration.short-description": "",
