--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -44,7 +44,7 @@
   "docspace.room.type.form-filling-room": "",
   "docspace.room.type.collaboration": "コラボレーションルーム",
   "docspace.room.type.public": "パブリックルーム",
-  "docspace.room.type.vdr": "バーチャルデータルーム",
+  "docspace.room.type.vdr": "",
   "docspace.room.type.custom": "カスタムルーム",
   "docspace.room.type.form-filling-room.short-description": "",
   "docspace.room.type.collaboration.short-description": "",
