feat: connection setup is divided into steps

--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -26,6 +26,7 @@
   "button.connect": "Conectar",
   "button.change": "Cambiar",
   "button.cancel": "Cancelar",
+  "button.create-api-key": "",
   "button.save": "Guardar",
   "button.request-access": "Solicitar acceso",
   "button.reinstall": "",
@@ -39,6 +40,8 @@
   "docspace.room.type.vdr": "Sala de datos virtuales",
   "docspace.room.type.custom": "Sala personalizada",
   "error.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
+  "error.empty-field": "",
+  "error.incorrect-docspace-address": "",
   "link.learn-more": "Más información",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
@@ -56,17 +59,21 @@
   "settings.authorization.inputs.password": "Contraseña",
   "settings.authorization.menu-item": "Autorización",
   "settings.connection.saving.error.undefined": "No se ha podido guardar los ajustes de ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
   "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "Los ajustes de ONLYOFFICE DocSpace se han guardado",
+  "settings.connection.status.connected": "",
   "settings.connection.disconnection.description": "¿Está seguro que quiere desconectar ONLYOFFICE DocSpace? Esto resultará en que todas las conexiones entre Acuerdos y salas de DocSpace se perderán. Y también todos los datos de autorización de usuario se eliminarán.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace se ha desconectado correctamente",
   "settings.connection.disconnection.error": "No se ha podido desconectar ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurar la configuración de conexión de la aplicación ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "",
   "settings.connection.subtitle.change": "",
-  "settings.connection.inputs.address": "Dirección de ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.title": "Dirección de ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "",
   "settings.connection.inputs.api-key.description": "",
   "settings.connection.menu-item": "Conexión"
