--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -26,6 +26,7 @@
   "button.connect": "Connecter",
   "button.change": "Modifier",
   "button.cancel": "Annuler",
+  "button.create-api-key": "",
   "button.save": "Enregistrer",
   "button.request-access": "Demander l'accès",
   "button.reinstall": "Réinstaller l'application",
@@ -39,6 +40,8 @@
   "docspace.room.type.vdr": "Salle de données virtuelle",
   "docspace.room.type.custom": "Salle personnalisée",
   "error.common": "Un problème s'est produit. Veuillez recharger l'application.",
+  "error.empty-field": "",
+  "error.incorrect-docspace-address": "",
   "link.learn-more": "En savoir plus",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
@@ -56,17 +59,21 @@
   "settings.authorization.inputs.password": "Mot de passe",
   "settings.authorization.menu-item": "Authorization",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace n'est pas joignable",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Clé de l'API de DocSpace invalide, veuillez réessayer",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Le propriétaire de la clé API de DocSpace n'est pas un administrateur DocSpace",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "Les paramètres d'ONLYOFFICE DocSpace ont été sauvegardés",
+  "settings.connection.status.connected": "",
   "settings.connection.disconnection.description": "Souhaitez-vous déconnecter ONLYOFFICE DocSpace ? Cela entraînera la perte de toutes les connexions entre Deals et les salles DocSpace. De plus, toutes les données d'autorisation de l'utilisateur seront supprimées",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace a été déconnecté avec succès",
   "settings.connection.disconnection.error": "Impossible de déconnecter ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurez les paramètres de connexion de l'application ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Connectez votre ONLYOFFICE DocSpace à Pipedrive",
   "settings.connection.subtitle.change": "Changez d'adresse ou déconnectez votre ONLYOFFICE DocSpace de Pipedrive",
-  "settings.connection.inputs.address": "Adresse d'ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.title": "Adresse d'ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "Clé de l'API de ONLYOFFICE DocSpace",
   "settings.connection.inputs.api-key.description": "La clé API doit être créée par un administrateur de DocSpace et doit inclure les champs d'accès suivants : Profil (lecture), Contacts (écriture) et Salles (écriture).",
   "settings.connection.menu-item": "Connexion"
