--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -26,6 +26,7 @@
   "button.connect": "Connetti",
   "button.change": "Cambia",
   "button.cancel": "Annulla",
+  "button.create-api-key": "",
   "button.save": "Salva",
   "button.request-access": "Richiedi l'accesso",
   "button.reinstall": "Reinstalla l'app",
@@ -39,6 +40,8 @@
   "docspace.room.type.vdr": "Stanza di dati virtuale",
   "docspace.room.type.custom": "Stanza personalizzata",
   "error.common": "Qualcosa è andato storto. Ricarica l'app.",
+  "error.empty-field": "",
+  "error.incorrect-docspace-address": "",
   "link.learn-more": "Per saperne di più",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
@@ -56,17 +59,21 @@
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.menu-item": "Autorizzazione",
   "settings.connection.saving.error.undefined": "Impossibile salvare le impostazioni di ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "Impossibile raggiungere ONLYOFFICE DocSpace",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Chiave API DocSpace non valida, riprova",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Il proprietario della chiave API DocSpace non è un amministratore DocSpace",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "Le impostazioni di ONLYOFFICE DocSpace sono state salvate",
   "settings.connection.disconnection.description": "Sei sicuro di voler disconnettere ONLYOFFICE DocSpace? Questo comporterà la perdita di tutte le connessioni tra Deals e le stanze DocSpace. Inoltre, tutti i dati di autorizzazione utente saranno eliminati.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace disconnesso con successo",
+  "settings.connection.status.connected": "",
   "settings.connection.disconnection.error": "Impossibile disconnettere ONLYOFFICE DocSpace",
   "settings.connection.title": "Configura le impostazioni di connessione dell'app ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Collega il tuo ONLYOFFICE DocSpace a Pipedrive",
   "settings.connection.subtitle.change": "Cambia indirizzo o disconnetti il tuo ONLYOFFICE DocSpace da Pipedrive",
-  "settings.connection.inputs.address": "Indirizzo ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.title": "Indirizzo di ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "Chiave API ONLYOFFICE DocSpace",
   "settings.connection.inputs.api-key.description": "La chiave API deve essere creata da un amministratore DocSpace e deve includere i seguenti permessi: Profilo (Lettura), Contatti (Scrittura) e Stanze (Scrittura).",
   "settings.connection.menu-item": "Connessione"
