--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -26,6 +26,7 @@
   "button.connect": "Подключиться",
   "button.change": "Изменить",
   "button.cancel": "Отменить",
+  "button.create-api-key": "",
   "button.save": "Сохранить",
   "button.request-access": "Запросить доступ",
   "button.reinstall": "Переустановить приложение",
@@ -39,6 +40,8 @@
   "docspace.room.type.vdr": "Виртуальная комната данных",
   "docspace.room.type.custom": "Пользовательская комната",
   "error.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
+  "error.empty-field": "",
+  "error.incorrect-docspace-address": "",
   "link.learn-more": "Узнать больше",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
@@ -56,17 +59,21 @@
   "settings.authorization.inputs.password": "Пароль",
   "settings.authorization.menu-item": "Авторизация",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
+  "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace недоступен",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Неверный ключ API DocSpace, попробуйте еще раз",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Владелец API ключа DocSpace не является администратором DocSpace",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "Настройки ONLYOFFICE DocSpace сохранены",
+  "settings.connection.status.connected": "",
   "settings.connection.disconnection.description": "Вы уверены, что хотите отключить ONLYOFFICE DocSpace? Это приведет к потере всех соединений между сделками и комнатами DocSpace. Также будут удалены все данные авторизации пользователей",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace успешно отключен",
   "settings.connection.disconnection.error": "Не удалось отключить ONLYOFFICE DocSpace",
   "settings.connection.title": "Настройте подключение приложения ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Подключите ваш ONLYOFFICE DocSpace к Pipedrive",
   "settings.connection.subtitle.change": "Измените адрес или отключите свой ONLYOFFICE DocSpace от Pipedrive",
-  "settings.connection.inputs.address": "Адрес ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.title": "Адрес ONLYOFFICE DocSpace",
+  "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Ключ",
   "settings.connection.inputs.api-key.description": "Автором API ключа должен быть администратор DocSpace, и ключ должен иметь права доступа (Профиль - Чтение, Контакты - Запись, Комнаты - Запись).",
   "settings.connection.menu-item": "Соединение"
