--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -26,6 +26,7 @@
   "button.connect": "Connect",
   "button.change": "Change",
   "button.cancel": "Cancel",
+  "button.create-api-key": "Create a key",
   "button.save": "Save",
   "button.request-access": "Request access",
   "button.reinstall": "Reinstall app",
@@ -39,6 +40,8 @@
   "docspace.room.type.vdr": "Virtual Data room",
   "docspace.room.type.custom": "Custom room",
   "error.common": "Something went wrong. Please reload the app.",
+  "error.empty-field": "Please fill out this field",
+  "error.incorrect-docspace-address": "Incorrect DocSpace address, please try again",
   "link.learn-more": "Learn more",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
@@ -56,17 +59,21 @@
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.menu-item": "Authorization",
   "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
+  "settings.connection.saving.error.common-invalid-api-key": "Invalid DocSpace API key, please try again",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace cannot be reached",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Invalid DocSpace API key, please try again",
-  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "The owner of the DocSpace API key is not a DocSpace admin",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_INVALID": "Invalid API key. Please check your API key and try to connect again.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "Invalid API key. Please make sure that the author of the API key is DocSpace admin and try to connect again.",
+  "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Invalid API key. Please check the Access Scopes for API key in DocSpace and try to connect again.",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
+  "settings.connection.status.connected": "Your DocSpace has been successfully connected",
   "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfully disconnected",
   "settings.connection.disconnection.error": "Could not disconnect ONLYOFFICE DocSpace",
   "settings.connection.title": "Configure connection settings of the ONLYOFFICE DocSpace app",
   "settings.connection.subtitle.connect": "Connect your ONLYOFFICE DocSpace to Pipedrive",
   "settings.connection.subtitle.change": "Change address or disconnect your ONLYOFFICE DocSpace from Pipedrive",
-  "settings.connection.inputs.address": "ONLYOFFICE DocSpace address",
+  "settings.connection.inputs.url.title": "ONLYOFFICE DocSpace address",
+  "settings.connection.inputs.url.description": "Enter the URL of your DocSpace in the field above. For example, https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Key",
   "settings.connection.inputs.api-key.description": "The API key must be created by a DocSpace admin and should include the following access scopes: Profile (Read), Contacts (Write), and Rooms (Write).",
   "settings.connection.menu-item": "Connection"
