--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -75,6 +75,6 @@
   "settings.connection.inputs.url.title": "ONLYOFFICE DocSpace address",
   "settings.connection.inputs.url.description": "Enter the URL of your DocSpace in the field above. For example, https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Key",
-  "settings.connection.inputs.api-key.description": "The API key must be created by a DocSpace admin and should include the following access scopes: Profile (Read), Contacts (Write), and Rooms (Write).",
+  "settings.connection.inputs.api-key.tooltip": "Before connecting the app, please go to your DocSpace, create a new API key and enter it here. You can choose Permissions (All) or set restricted access with these required scopes for proper app functionality: Profile (Read), Contacts (Write), and Rooms (Write).",
   "settings.connection.menu-item": "Connection"
 }
