feat: added forgot password link for input password on authorization page

--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -27,6 +27,7 @@
   "button.change": "Change",
   "button.cancel": "Cancel",
   "button.create-api-key": "Create a key",
+  "button.forgot-password": "Forgot password?",
   "button.save": "Save",
   "button.request-access": "Request access",
   "button.reinstall": "Reinstall app",
