--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -27,6 +27,7 @@
   "button.change": "Cambiar",
   "button.cancel": "Cancelar",
   "button.create-api-key": "",
+  "button.forgot-password": "",
   "button.save": "Guardar",
   "button.request-access": "Solicitar acceso",
   "button.reinstall": "",
