--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -27,6 +27,7 @@
   "button.change": "Modifier",
   "button.cancel": "Annuler",
   "button.create-api-key": "",
+  "button.forgot-password": "",
   "button.save": "Enregistrer",
   "button.request-access": "Demander l'accès",
   "button.reinstall": "Réinstaller l'application",
