--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -27,6 +27,7 @@
   "button.change": "Cambia",
   "button.cancel": "Annulla",
   "button.create-api-key": "",
+  "button.forgot-password": "",
   "button.save": "Salva",
   "button.request-access": "Richiedi l'accesso",
   "button.reinstall": "Reinstalla l'app",
