--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -27,6 +27,7 @@
   "button.change": "変更",
   "button.cancel": "キャンセル",
   "button.create-api-key": "",
+  "button.forgot-password": "",
   "button.save": "保存",
   "button.request-access": "アクセスをリクエストする",
   "button.reinstall": "アプリを再インストール",
