--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -27,6 +27,7 @@
   "button.change": "Alterar",
   "button.cancel": "Cancelar",
   "button.create-api-key": "",
+  "button.forgot-password": "",
   "button.save": "Salvar",
   "button.request-access": "Solicitar acesso",
   "button.reinstall": "Reinstale o aplicativo",
