--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -27,6 +27,7 @@
   "button.change": "Изменить",
   "button.cancel": "Отменить",
   "button.create-api-key": "",
+  "button.forgot-password": "",
   "button.save": "Сохранить",
   "button.request-access": "Запросить доступ",
   "button.reinstall": "Переустановить приложение",
