--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -27,6 +27,7 @@
   "button.change": "Ändern",
   "button.cancel": "Abbrechen",
   "button.create-api-key": "",
+  "button.forgot-password": "",
   "button.save": "Speichern",
   "button.reinstall": "App neu installieren",
   "button.request-access": "Zugang beantragen",
