--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -20,7 +20,7 @@
   "button.reauthorize": "再認証",
   "button.settings": "設定に移動",
   "button.create.room": "ルームの作成",
-  "button.login": "ログイン",
+  "button.login": "",
   "button.logout": "ログアウト",
   "button.disconnect": "切断",
   "button.connect": "接続",
